feat: Defects4J compatibility — Java 11 bytecode target and --jvm-home flag
- Convert all 15 records to plain classes for --release 11 compatibility
- Replace Stream.toList() with Collectors.toList() at 3 call sites
- Lower bytecode target to Java 11 (options.release.set(11) in build.gradle.kts)
- Add --jvm-home CLI flag so test subprocesses can run under a target JVM
- Thread jvmHome through ProcessExecutor, CoverageRunner, and MutationRunner
- Pass --jvmPath to PITest for per-mutant fork JVM override